# bsz-gimp-plugins

./: .flake8  .gitignore  README.md  bsz-gimp-lib.py  bsz_gimp_lib.py  create_archive.sh  create_release.sh
bsz-dualbloom/: bsz-dualbloom.py
bsz-dualbloom2/: bsz-dualbloom2.py
bsz-filmic-chroma/: bsz-filmic-chroma.py  build.sh  filmic-chroma.rs
bsz-filmic-saturation/: bsz-filmic-saturation.py
bsz-goat-exercise/: bsz-goat-exercise.py
bsz-lightgrain/: bsz-lightgrain.py
bsz-pixel-math/: bsz-pixel-math.py
bsz-pixel-math-2/: bench.py  bsz-pixel-math-2.py  build.sh  pixel-math-2.rs
bsz-pixelbuster/: bsz-pixelbuster.py
bsz-shared/: Cargo.toml
bsz-shared/src/: lib.rs
bsz-template/: bsz-gimp-lib.py  bsz-template.py  bszgw.py
pixelbuster/: Cargo.toml  bench.py  build.sh
pixelbuster/src/: lib.rs
