[package]
name = "bsz-shared"
version = "0.1.0"
authors = ["Beinsezii <beinsezii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bsz_shared"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[profile.release]
lto = true
opt-level = 3
